--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{3.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{3.1} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Piano di Progetto} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -174,6 +174,8 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+			3.1 & 19/03/2009 Modifiche al consuntivo fase RPP-RQ & \\
+			\hline
 			3.0 & 07/03/2009 Verifica in preparazione al rilascio & Geremia Mirco\\
 			\hline
 			2.2 & 04/03/2009 Aggiunto consuntivo fase RPP-RQ & Geremia Mirco\\
@@ -732,7 +734,7 @@ risorse del previsto anche grazie al buon lavoro svolto nella fase PRE-RR.
 			\hline
 			Geremia Mirco   	&  0  &  0  &  0  &  23 &  18 &  0  &  41\\ % R7
 			\hline	
-			Rizzo Maurizio  	&  8  &  16 &  0  &  0  &  12 &  10  &  46\\ %R3
+			Rizzo Maurizio  	&  8  &  16 &  0  &  0  &  12 &  0  &  36\\ %R3
 			\hline	
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
@@ -744,7 +746,7 @@ risorse del previsto anche grazie al buon lavoro svolto nella fase PRE-RR.
 Si pu\`o notare dai dati che in generale \`e stato richiesto un impegno leggermente minore rispetto a quanto previsto, in particolare il ruolo di Analista ha richiesto meno impegno, poich\`e nel preventivo l'azienda si era tutelata su questo campo inserendo ore extra per eventuali problemi. Sono state utilizzate meno ore anche per quel che riguarda la verifica, dove hanno giocato un ruolo importante gli stumenti adottati e le modalit\`a di automazione della gestione degli errori, che hanno permesso di velocizzare i processi di verifica. L'unico ruolo che ha richiesto un maggiore impegno \`e stato quello del Programmatore, poich\`e si sono riscontrati problemi non previsti nell'implementazione di alcuni elementi.
 
 \subsubsezione{Implicazioni del consuntivo}
-In questa fase il progetto \`e quasi completato e ci si aspetta un lavoro minimo nella fase seguente per quel che riguarda la codifica e la relativa verifica. Il preventivo relativo alla fase RQ-RA \`e stato quindi aggiornato per questo motivo, e soprattutto per l'acquisizione e l'integrazione di un nuovo membro all'interno dell'azienda.
+In questa fase il progetto \`e in fase di completamento e ci si aspetta un lavoro nella fase seguente per quel che riguarda la codifica e la relativa verifica. Il preventivo relativo alla fase RQ-RA \`e stato quindi aggiornato per questo motivo, e soprattutto per l'acquisizione e l'integrazione di un nuovo membro all'interno dell'azienda.
 
 
 \sezione{Gestione del Piano di Progetto}
