--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -540,13 +540,13 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 			\hline
 			Carollo Mirko & Verif.   \\
 			\hline
-			Cunico Marco & Amm. - Program.   \\
+			Cunico Marco & Amm. - Program. - Verif.  \\
 			\hline
 			Dal Bosco Davide & Amm. - Program.  \\
 			\hline
-			Dissegna Stefano & Resp. - Progett.   \\
+			Dissegna Stefano & Resp. - Progett. - Verif.   \\
 			\hline
-			Geremia Mirco & Proget.   \\
+			Geremia Mirco & Proget. - Program.   \\
 			\hline
             Rizzo Maurizio  & Verif. \\
 			\hline
