DP & PQ: mod. versione

--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -184,6 +184,8 @@ Il presente documento descrive le strategie per la verifica della correttezza de
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
      \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+     4.0 &   22$\slash$03$\slash$2009 Modifiche per rilascio RQ & Dissegna Stefano\\
+      \hline
      3.6 &    19$\slash$03$\slash$2009 Aggiunta sezione sulle azioni da intraprendere dopo un errore & Dissegna Stefano\\
       \hline
      3.5 &    18$\slash$03$\slash$2009 Breve descrizione dei test manuali & Dissegna Stefano\\
